recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:2: error: type List takes type parameters
var rep:List
        ^butLast:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var rep:List
    ^